# fortran_example

./: .gitignore  CMakeLists.txt  README.md  arithmetic  array  array.f90  array_slice  change_branch.txt  concurrent  concurrent.f90  control_process  create_type  create_type.f90  dynamic_array  dynamic_array.f90  float_arithmetic  gotchas  gotchas.f90  m_employee.mod  m_matrix.mod  m_shapes.mod  manage_code  mod_example  my_mod  my_mod.mod  read_para.f90  string_array.f90  type_declare  type_declare.f90  type_extends  type_extends.f90  use_mod.f90
.github/workflows/: blank.yml
C_fortran/: CMakeLists.txt
C_fortran/c_call_fortran/: CMakeLists.txt  c2fortran.c  showhie.f90
C_fortran/fortran_call_c/: CMakeLists.txt  main.f90  sub.c
C_fortran/type_with_allocate_para/: CMakeLists.txt  fortran_code.f90  main.c
FILE_IO/: example.txt  file_io.f90  output.txt  trimExample.f90  write_function.f90
base_knowledge/: CMakeLists.txt  code_name  code_name.f90
check_dot/: CMakeLists.txt  check_dot.f90  read_general_first_line.f90  test.in
common/: CMakeLists.txt  function_first.f90  generate_random_num.f90  module_example.f90  optional_paramter.f90  pointer.f90  test_reshape.f90
dimension_subroutine_test/: CMakeLists.txt  dimension_subroutine.f90
dynamic_allocate/: CMakeLists.txt  allocate_array.f90  allocated_to_not_allocate.f90
fortran_add/: add  add.f90  add_.mod
fortran_char/: fortran_char.f90
io_example/: CMakeLists.txt  example_out.f90
main_project/: CMakeLists.txt
main_project/sub_project/: CMakeLists.txt
may_be_mistake/: implied_save.f90  type_example.f90
mpi_fortran/: CMakeLists.txt  CMakeListsxx.txt  CMakePresets.json  README.md  fortran_mpi_struct.f90  mpi_fortran.f90
mpi_fortran/clibrary/: CMakeLists.txt
mpi_fortran/clibrary/IO/: .gitignore  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  README.md
mpi_fortran/clibrary/IO/tests/: CMakeLists.txt  test.xml  test_dat.c  test_vtk.c  test_xml.c
mpi_fortran/clibrary/MaterialGenerator/: CMakeLists.txt
mpi_fortran/clibrary/MaterialGenerator/doc/manual/dox/shared/: material_1_material.dox  material_2_tensor.dox
mpi_fortran/clibrary/MaterialGenerator/stash/: symmetry.c
mpi_fortran/clibrary/MathBasic/: .gitignore  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md
mpi_fortran/clibrary/MathBasic/tests/: CMakeLists.txt  test.c
mpi_fortran/clibrary/StructureGenerator/: CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md
mpi_fortran/clibrary/StructureGenerator/doc/: README.md
mpi_fortran/clibrary/StructureGenerator/doc/documentation/: Doxyfile  doxybook-config.json  mkdocs.yml
mpi_fortran/clibrary/StructureGenerator/doc/manual/: .gitignore  Doxyfile  doxybook-config.json  test.bib
mpi_fortran/clibrary/StructureGenerator/doc/manual/dox/: index.dox
mpi_fortran/clibrary/StructureGenerator/doc/manual/dox/shared/: input_1_xml_dimension.dox  input_1_xml_structure.dox  input_2_structure.dox  structgen_1_index.dox  structgen_2_slab.dox  structgen_3_ellipsoid.dox  structgen_4_ellipsoid_shell.dox  structgen_5_random_ellipsoid.dox  structgen_6_random_ellipsoid_shell.dox  structgen_7_random_scale_ellipsoid.dox  structgen_8_random_scale_ellipsoid_shell.dox  structgen_9_external.dox
mpi_fortran/clibrary/StructureGenerator/doc/manual/mkdoc/: mkdocs.yml
mpi_fortran/clibrary/StructureGenerator/main/: CMakeLists.txt
mpi_fortran/clibrary/StructureGenerator/main/ellipsoid/: CMakeLists.txt  ellipsoid.c  ellipsoid.xml
mpi_fortran/clibrary/StructureGenerator/main/slab/: CMakeLists.txt  slab.c  slab.xml
mpi_fortran/clibrary/StructureGenerator/test/material/: input.xml  n_material_generator.c  n_material_get_equivalent_index.c  n_material_index_string_to_int.c  n_material_tensor_assign_by_index_string.c
mpi_fortran/clibrary/TextUtil/: .gitignore  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md
mpi_fortran/clibrary/TextUtil/test/: CMakeLists.txt  hello.c  test_NString.c  test_NStringArray.c  test_char.c  test_hex.c  test_hex.txt
mpi_outfile_vtk/: mpi_outfile_vtk.f90
mpi_output/: mpi_gather_example.f90  output4D.f90
parallel_or_not/: data.txt  parallel.f90
pointer_fortran/: CMakeLists.txt  pointer.f90
previous_file/: README.md  arithmetic.f90  array_slice.f90  control_process.f90  float_arithmetic.f90  hello_world.f90  manage_code.f90  mod_example.f90  my_mod.f90  para_type.f90
sub_module/: allocated_vector.f90  mix_call.f90
test-driver/: CMakeLists.txt
test-driver/test/: CMakeLists.txt  main.f90  test_suite2.f90
test_test-drive/: CMakeLists.txt
test_test-drive/core-code/: CMakeLists.txt  core_function.f90
test_test-drive/test/: CMakeLists.txt  main.f90  test_suite1.f90
type_extend/: extend.f90
